优化前端功能和性能：

--- a/apps/h5-client/index.html
+++ b/apps/h5-client/index.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#ee0a24">
     <title>悦享茶歇</title>
+    <!-- 预连接到API服务器 -->
+    <link rel="preconnect" href="/api">
+    <!-- 预连接到上传文件服务器 -->
+    <link rel="preconnect" href="/uploads">
+    <!-- 预加载关键CSS -->
+    <link rel="preload" as="style" href="/src/styles/global.scss">
+    <!-- 预加载关键字体（如果有） -->
+    <link rel="preload" as="font" crossorigin href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap">
+    <!-- 预取常见路由 -->
+    <link rel="prefetch" as="script" href="/src/views/Home.vue">
+    <link rel="prefetch" as="script" href="/src/views/Category.vue">
+    <link rel="prefetch" as="script" href="/src/views/ProductDetail.vue">
+    <!-- 预取可能需要的组件 -->
+    <link rel="prefetch" as="script" href="/src/components/ProductCard.vue">
   </head>
   <body>
     <div id="app"></div>
